force-app/main/default/objects/Assumption__c/Assumption__c.object-meta.xml
<CustomObject>
    <label>Assumption</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assumption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>