force-app/main/default/objects/Assumption__c/fields/Assumption_Key__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Key__c</fullName>
    <formula>Market__c &amp; &apos;~&apos; &amp; Supplier__c &amp; &apos;~&apos; &amp; TEXT(Commodity__c) &amp; &apos;~&apos; &amp; TEXT(Business_Size__c) &amp; &apos;~&apos; &amp; TEXT(Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assumption Key</label>
    <type>Text</type>
</CustomField>