force-app/main/default/objects/Assumption__c/fields/Business_Size__c.field-meta.xml
<CustomField>
    <fullName>Business_Size__c</fullName>
    <label>Business Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sizes</valueSetName>
    </valueSet>
</CustomField>