force-app/main/default/objects/Assumption__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commodities</valueSetName>
    </valueSet>
</CustomField>