force-app/main/default/objects/Assumption__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Assumptions</relationshipLabel>
    <relationshipName>Assumptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>