force-app/main/default/objects/Assumption__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This is not a supplier</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assumptions</relationshipLabel>
    <relationshipName>Assumptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>