force-app/main/default/objects/Assumption__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Fee</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Margin Min</fullName>
            </value>
            <value>
                <fullName>Margin Max</fullName>
            </value>
            <value>
                <fullName>DNE Admin Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>