force-app/main/default/objects/Assumption__c/listViews/Alberta_Direct_Energy.listView-meta.xml
<ListView>
    <fullName>Alberta_Direct_Energy</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Amount__c</columns>
    <columns>Business_Size__c</columns>
    <columns>Commodity__c</columns>
    <columns>Market__c</columns>
    <columns>Supplier__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Supplier__c</field>
        <operation>contains</operation>
        <value>Direct Energy Business - Alberta</value>
    </filters>
    <label>Alberta - Direct Energy</label>
</ListView>