force-app/main/default/objects/Assumption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Market__c</columns>
    <columns>Commodity__c</columns>
    <columns>Active__c</columns>
    <columns>Business_Size__c</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>